# zerosync-starknet

./: .gitignore  .gitmodules  Cargo.toml  README.md  bootloader_increment_batch.py  bootloader_increment_batch_input.py  hash_program.py  increment.py  increment_batch.cairo  increment_batch_input.py  increment_input_template.json  setup.py  zerosync-starknet.py
cairo/: ministark.cairo  test_recurse.cairo
parser/: Cargo.toml
parser/src/: lib.rs  main.rs  memory.rs
parser/test/: air-private-input.json  air-public-input.json  bootloader_compiled.json  bootloader_inputs.json
starknet/: .gitignore  Cargo.toml  Scarb.toml  call_contract.sh
utils/: btc_api.py  python_utils.cairo
