[package]
name = "sandstorm_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
sandstorm-binary = { path = "../../sandstorm-mirror/binary" }
sandstorm-layouts = { path = "../../sandstorm-mirror/layouts" }
sandstorm-crypto = { path = "../../sandstorm-mirror/crypto" }
sandstorm = { path = "../../sandstorm-mirror" }
ministark-gpu = { version = "0.1", path = "../../ministark-mirror/gpu" }
ministark = { path = "../../ministark-mirror" }
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-std = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
structopt = "0.3"
serde_json = "1.0"
num-traits = "0.2"
pollster = "0.2"
num-bigint = { version = "0.4" }
rayon = { version = "1.5", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "4.0.18", features = ["derive"] }
sha2 = "0.10"
ruint = { version = "1.7", features = [ "serde", "num-bigint" ] }
sha3 = "0.10"
blake2 = "0.10"
digest = "0.10"
